<resources>
    <string name="app_name">passtwo</string>
    <string name="settings_button">Settings</string>
    <string name="top_bar_text">password manager</string>
    <string name="spage">Settings/Login page</string>
    <string name="request_device_token">Request Device Token</string>
    <string name="username_box">Username</string>
    <string name="repo_box">Repository</string>
    <string name="id_box">Enter Client ID</string>
    <string name="save_prefs_button">Save Settings</string>
    <string name="verify">Get Token</string>
    <string name="vcode_placeholder">Verification Code will appear here</string>
    <string name="uname_ph">Username not found</string>
    <string name="email_ph">Email not found</string>
    <string name="cred_btn">Passwords</string>
    <string name="pass">GPG password</string>
    <string name="site_name">Passtwo</string>
    <string name="search_hint">Passtwo</string>
</resources>