<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings_page">

    <Button
        android:id="@+id/req_device_token"
        android:layout_width="205dp"
        android:layout_height="57dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:onClick="get_device_code"
        android:text="@string/request_device_token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <EditText
        android:id="@+id/github_username"
        android:layout_width="272dp"
        android:layout_height="63dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/username_box"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/repo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/repo_name"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/repo_box"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_username" />

    <EditText
        android:id="@+id/client_id_field"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="16dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/id_box"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/req_device_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repo_name" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="181dp"
        android:layout_height="57dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="173dp"
        android:text="@string/save_prefs_button"
        android:onClick="save_prefs"
        app:layout_constraintBottom_toTopOf="@+id/client_id_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repo_name" />


</androidx.constraintlayout.widget.ConstraintLayout>